--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,39 @@
+# Node.js dependencies
 node_modules/
+npm-debug.log
+yarn-error.log
+package-lock.json
+
+# Environment variables
+.env
+.env.local
+
+# Database (SQLite)
+database.sqlite
+*.sqlite
+*.sqlite3
+*.db
+
+# Operating System files
+.DS_Store
+Thumbs.db
+ehthumbs.db
+Desktop.ini
+
+# IDE & Editors
+.idea/
+.vscode/
+*.swp
+*.swo
+*.swn
+
+# Testing & Coverage
+coverage/
+.nyc_output/
+
+# Temporary files
+tmp/
+temp/
+
+# Agent/Bot specific
+.gemini/
